--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,11 @@
-fastapi==0.115.0
+fastapi==0.115.4
 uvicorn[standard]==0.30.6
+aliyun-python-sdk-core==2.16.0
+oss2==2.19.1
+alibabacloud_alimt20181012==1.3.0
+python-multipart==0.0.16
+SQLAlchemy==2.0.36
+sqlmodel==0.0.22
+psycopg2-binary==2.9.10
+fastapi-pagination==0.12.31
+pydantic==2.9.2
