--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ asyncpg==0.30.0
 greenlet==3.1.1
 loguru==0.7.2
 httpx==0.27.2
-#controlnet-aux==0.0.9
-#mediapipe==0.10.18
+controlnet-aux==0.0.9
+mediapipe==0.10.18
 #openai==1.54.3
 #dashscope==1.20.12
