--- a/requirements.txt
+++ b/requirements.txt
@@ -15,5 +15,6 @@ loguru==0.7.2
 httpx==0.27.2
 controlnet-aux==0.0.9
 mediapipe==0.10.18
+opencv-python-headless==4.10.0.84
 #openai==1.54.3
 #dashscope==1.20.12
