--- a/requirements.txt
+++ b/requirements.txt
@@ -16,5 +16,6 @@ httpx==0.27.2
 controlnet-aux==0.0.9
 mediapipe==0.10.18
 opencv-python-headless==4.10.0.84
+yt-dlp==2024.11.18
 #openai==1.54.3
 #dashscope==1.20.12
