--- a/requirements.txt
+++ b/requirements.txt
@@ -18,5 +18,8 @@ mediapipe==0.10.18
 opencv-python-headless==4.10.0.84
 yt-dlp==2024.11.18
 sib_api_v3_sdk==7.6.0
+PyJWT==2.10.1
+redis==5.2.0
+certifi
 #openai==1.54.3
 #dashscope==1.20.12
