--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,9 @@ yt-dlp==2024.11.18
 sib_api_v3_sdk==7.6.0
 PyJWT==2.10.1
 redis==5.2.0
-certifi
 whisperX==3.1.6
+volcengine-python-sdk==1.0.112
+requests==2.26.0
+certifi
 #openai==1.54.3
 #dashscope==1.20.12
