--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,10 @@ alibabacloud_alimt20181012==1.3.0
 python-multipart==0.0.16
 SQLAlchemy==2.0.36
 sqlmodel==0.0.22
-psycopg2-binary==2.9.10
+PyMySQL==1.1.1
+aiomysql==0.2.0
 fastapi-pagination==0.12.31
 pydantic==2.9.2
-asyncpg==0.30.0
 greenlet==3.1.1
 loguru==0.7.2
 httpx==0.27.2
