--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ uvicorn[standard]==0.30.6
 aliyun-python-sdk-core==2.16.0
 oss2==2.19.1
 alibabacloud_alimt20181012==1.3.0
+alibabacloud-imageseg20191230==3.0.1
 python-multipart==0.0.16
 SQLAlchemy==2.0.36
 sqlmodel==0.0.22
